crates/spite-parser/tests/snapshots/identifiers__identifier_escapes_decode_names_and_preserve_source_spans.snap
---
source: crates/spite-parser/tests/identifiers.rs
expression: script
---
Script {
    statements: [
        Statement {
            kind: Lexical {
                mutable: true,
                bindings: [
                    Binding {
                        name: "𐐀",
                        span: Span {
                            start: 4,
                            end: 13,
                        },
                        initializer: Some(
                            Expr {
                                depth: 1,
                                kind: Literal(
                                    Number(
                                        1.0,
                                    ),
                                ),
                                span: Span {
                                    start: 16,
                                    end: 17,
                                },
                            },
                        ),
                    },
                ],
            },
            span: Span {
                start: 0,
                end: 18,
            },
        },
        Statement {
            kind: Expression(
                Expr {
                    depth: 1,
                    kind: Identifier(
                        "𐐀",
                    ),
                    span: Span {
                        start: 19,
                        end: 29,
                    },
                },
            ),
            span: Span {
                start: 19,
                end: 30,
            },
        },
    ],
    strict: false,
}
