crates/spite-parser/tests/snapshots/identifiers__unicode_identifier_names_and_byte_spans.snap
---
source: crates/spite-parser/tests/identifiers.rs
expression: script
---
Script {
    statements: [
        Statement {
            kind: Lexical {
                mutable: true,
                bindings: [
                    Binding {
                        name: "π",
                        span: Span {
                            start: 4,
                            end: 6,
                        },
                        initializer: Some(
                            Expr {
                                depth: 1,
                                kind: Literal(
                                    Number(
                                        1.0,
                                    ),
                                ),
                                span: Span {
                                    start: 9,
                                    end: 10,
                                },
                            },
                        ),
                    },
                ],
            },
            span: Span {
                start: 0,
                end: 11,
            },
        },
        Statement {
            kind: Expression(
                Expr {
                    depth: 1,
                    kind: Identifier(
                        "π",
                    ),
                    span: Span {
                        start: 12,
                        end: 14,
                    },
                },
            ),
            span: Span {
                start: 12,
                end: 15,
            },
        },
    ],
    strict: false,
}
